fix(apollo,look&feel): corrected toggle size and handle alignment

--- a/client/apollo/css/src/Toggle/ToggleApollo.scss
+++ b/client/apollo/css/src/Toggle/ToggleApollo.scss
@@ -2,13 +2,13 @@
 
 .af-toggle {
   --toggle-bg-color: var(--neutral-50);
-  --toggle-border-color: var(--neutral-50);
+  --toggle-border-color: unset;
   --toggle-focus-outline-color: var(--axa-blue-100);
-  --toggle-border-size: 1px;
+  --toggle-border-size: 0;
   --toggle-border-radius: var(--radius-100);
   --toggle-padding: 2px;
-  --toggle-width: 42px;
-  --toggle-height: 24px;
+  --toggle-width: calc(var(--toggle-handle-size) * 2 - var(--toggle-padding));
+  --toggle-height: var(--toggle-handle-size);
   --toggle-handle-color: var(--white);
   --toggle-handle-size: 20px;
   --toggle-handle-scale: 1;
@@ -16,19 +16,15 @@
 
   &:has(:checked) {
     --toggle-bg-color: var(--axa-blue-100);
-    --toggle-border-color: var(--axa-blue-100);
 
     .af-toggle__handle {
       --toggle-handle-position: calc(
-        var(--toggle-width) - var(--toggle-handle-size) - calc(
-            var(--toggle-padding) * 2
-          ) - var(--toggle-border-size)
+        var(--toggle-handle-size) - var(--toggle-padding)
       );
     }
   }
 
   &:has(:disabled) {
     --toggle-bg-color: var(--neutral-25);
-    --toggle-border-color: var(--neutral-25);
   }
 }
